# cumulocity-python-api

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  azure-pipelines.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.github/workflows/: codeql-analysis.yml  pylint.yml  python-publish.yml
c8y_api/: __init__.py  _auth.py  _base_api.py  _jwt.py  _main_api.py  _registry_api.py  _util.py
c8y_api/app/: __init__.py
c8y_api/model/: __init__.py  _base.py  _parser.py  _updatable.py  _util.py  administration.py  alarms.py  applications.py  audit.py  binaries.py  events.py  identity.py  inventory.py  managedobjects.py  measurements.py  notification2.py  operations.py  tenant_options.py  tenants.py
c8y_tk/mqttconnect/: __init__.py  listener.py
c8y_tk/notification2/: __init__.py  listener.py
docs/: apidocs.rst  conf.py  getting-started.rst  index.rst
integration_tests/: conftest.py  device_inventory_test.py  inventory_test.py  test_alarms.py  test_applications.py  test_apps.py  test_audits.py  test_binaries.py  test_bulk_operations.py  test_device_registry.py  test_devicegroups.py  test_events.py  test_global_roles.py  test_identity.py  test_inventory.py  test_inventoryroles.py  test_measurements.py  test_operations.py  test_tenant_options.py  test_users.py  utils.py
main/: c8y_api.py  c8y_app.py  c8y_model.py  c8y_rest.py  log_util.py
sample/: alarms.py  applications.py  device_groups.py  device_registration.py  events.py  external_ids.py  globalroles_sample.py  inventory_sample.py  inventoryroles_sample.py  managed_objects.py  measurements.py  user_applications.py  users.py
samples/: Dockerfile  build.sh  cumulocity-mqttconnect.json  cumulocity-notification2_synchronous.json  cumulocity-tenant_options.json  cumulocity.json  dealing_with_measurements.py  device_registry.py  handling_events.py  mqttconnect.py  multi_tenant_app.py  notification2_asynchronous.py  notification2_synchronous.py  processing_modes.py  simple_agent.py  simple_tenant_app.py  tenant_options.py  user_sessions.py  util.py
test/: c8y_api.yaml  devices.py  globalrole_test.py  globalroles_sample.py  inventory_sample.py  inventory_test.py  inventoryroles_sample.py  measurements.py  measurements_sample.py  updateableproperties_test.py  users_sample.py
tests/: __init__.py  cumulocityapp_test.py  globalrole_test.py  test_app.py  test_auth.py  test_base_api.py  test_device_registry.py  test_util.py  updateableproperties_test.py  utils.py
tests/model/: alarm.json  application.json  audit_records.json  availability.json  bulk_operations.json  current_user.json  device.json  event.json  global_role.json  inventoryrole.json  managed_object.json  operation.json  series.json  subscriptions.json  tenant_option.json  tenants.json  test_alarm.py  test_application.py  test_audit.py  test_base.py  test_bulk_operation.py  test_device.py  test_event.py  test_global_role.py  test_inventory.py  test_inventoryrole.py  test_managedobject.py  test_measurements.py  test_notification2_token.py  test_operation.py  test_parser.py  test_resource.py  test_subscription.py  test_tenant.py  test_tenant_option.py  test_updatable.py  test_user.py  user.json
util/: __init__.py  env_util.py  microservice_util.py  testing_util.py
