[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "c8y_api"
dynamic = ["version"]
authors = [{name="Christoph Souris", email="christoph.souris@gmail.com"}]
description = "Python microservice and application client for the Cumulocity REST API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cachetools",
    "Deprecated",
    "inputimeout",
    "PyJWT",
    "python-dateutil",
    "PyYAML",
    "requests",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/SoftwareAG/cumulocity-python-api"
Source = "https://github.com/SoftwareAG/cumulocity-python-api"
Issues = "https://github.com/SoftwareAG/cumulocity-python-api/issues"
Documentation = "https://cumulocity-python-api.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"
