[metadata]
name = c8y_api
url = https://github.com/SoftwareAG/cumulocity-python-api
license_files = LICENSE
author = Christoph Souris
author_email = christoph.souris@softwareag.com
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
description = Python client for the Cumulocity REST API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    requests
    python-dateutil
    PyYAML
    Deprecated
    cachetools

packages = find:

[options.packages.find]
exclude =
    integration_tests
    tests
    build
    util
